Fix #939: map/unmap ByteBuffers with the JDK 22+ Arena API, not Unsafe.invokeCleaner
Unsafe::invokeCleaner is terminally deprecated (JDK 24+ warns on first
use, and it will be removed in a future JDK release). On JDK 22+,
ClassGraph now allocates direct ByteBuffers and memory-maps files using
a shared java.lang.foreign.Arena, and frees/unmaps them by closing the
arena, so neither theUnsafe nor invokeCleaner is touched at all. The
java.lang.foreign API is invoked through ReflectionUtils, since
ClassGraph still has to compile and run on JDK 8+. JDK 9-21 keep the
Unsafe.invokeCleaner path, and JDK 8 keeps the sun.misc.Cleaner path.

Also lifts the JDK 24+ restriction on enableMemoryMapping(), which was
a stopgap for the same warning, and makes files larger than 2GB fall
back to the RandomAccessFile API rather than throwing an uncaught
IllegalArgumentException from FileChannel.map.